didn't work, change back

--- a/archive.html
+++ b/archive.html
@@ -1,10 +1,8 @@
 ---
-layout: default
+layout: page
 title: Archive
 ---
 
-<h1>Archive</h1>
-<p>
 {% for post in site.posts %}
 
 <div>
@@ -16,4 +14,3 @@ title: Archive
 </div>
 
 {% endfor %}
-
