--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,10 @@ layout: page
 title: Archive
 ---
 
+<p class="message">
 Hey there! This page is included as an example. Feel free to customize it for your own use upon downloading. Carry on!
+</p>
+<p>In the novel, <em>The Strange Case of Dr. Jekyll and Mr. Hyde</em>, Mr. Poole is Dr. Jekyll’s virtuous and loyal butler. Similarly, Poole is an upstanding and effective butler that helps you build Jekyll themes. It’s made by <a href="https://twitter.com/mdo">@mdo</a>.</p>
 
 {% for post in site.posts %}
 
