--- a/archive.html
+++ b/archive.html
@@ -3,10 +3,12 @@ layout: page
 title: Archive
 ---
 
-<p></p>
-<p></p>
 {% for post in site.posts %}
-
+{% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+{% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+{% if year != nyear %}
+<br>
+{% endif %}
 <div>
   {{ post.date | date: "%b %-d, %Y" }}
     »
